--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css">
     <link rel="preload" href="./src/index.css" as="style">
-    <title>Vite + React</title>
+    <title>🐶Pet-Shop🐶</title>
   </head>
   <body class="fondo">
     <div id="root"></div>
