cambio de fondo

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,7 +9,7 @@
     <title>🐶Pet-Shop🐶</title>
   </head>
   <body class="fondo">
-    <div id="root"></div>
+    <div id="root" class="loco"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
